crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__if_stmt.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
if true:
  print a
elif true:
  print b
else:
  print c


# Func:
function "code":
  frame_size: 4
  length: 37
  const (length=3):
    0: "a"
    1: "b"
    2: "c"
  code:
     0 | push_true 
     1 | jump_if_false offset=15
     3 | nop 
     4 | nop 
     5 | nop 
     6 | nop 
     7 | load_global [0]
     9 | print 
    10 | jump offset=25
    12 | nop 
    13 | nop 
    14 | nop 
    15 | nop 
    16 | push_true 
    17 | jump_if_false offset=15
    19 | nop 
    20 | nop 
    21 | nop 
    22 | nop 
    23 | load_global [1]
    25 | print 
    26 | jump offset=9
    28 | nop 
    29 | nop 
    30 | nop 
    31 | nop 
    32 | load_global [2]
    34 | print 
    35 | ret 
    36 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━●
r3 │             ●━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  
