crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__imports-4.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
fn main():
  import test.{
    a0.{a1, a2},
    b0.{b1, b2}
  }

  print a1, a2
  print b1, b2


# Func:
function <main>:
  frame_size: 8
  length: 41
  const (length=4):
    0: <path test.a0.a1>
    1: <path test.a0.a2>
    2: <path test.b0.b1>
    3: <path test.b0.b2>
  code:
     0 | load_module [0], r3
     3 | load_module [1], r4
     6 | load_module [2], r5
     9 | load_module [3], r6
    12 | create_empty_list 
    13 | store_reg r7
    15 | load_reg r3
    17 | push_to_list r7
    19 | load_reg r4
    21 | push_to_list r7
    23 | print_list r7
    25 | create_empty_list 
    26 | store_reg r3
    28 | load_reg r5
    30 | push_to_list r3
    32 | load_reg r6
    34 | push_to_list r3
    36 | print_list r3
    38 | push_none 
    39 | ret 
    40 | suspend 

function <[[main]]>:
  frame_size: 4
  length: 6
  const (length=2):
    0: <func main>
    1: "main"
  code:
    0 | load_const [0]
    2 | store_global [1]
    4 | ret 
    5 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━●
r3 │             ●━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  
