crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__loop_stmt-13.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
loop:
  loop:
    continue
  continue


# Func:
function <[[main]]>:
  frame_size: 4
  length: 25
  const: <empty>
  code:
     0 | jump_back offset=0
     2 | nop 
     3 | nop 
     4 | nop 
     5 | nop 
     6 | jump_back offset=6
     8 | nop 
     9 | nop 
    10 | nop 
    11 | nop 
    12 | jump_back offset=12
    14 | nop 
    15 | nop 
    16 | nop 
    17 | nop 
    18 | jump_back offset=18
    20 | nop 
    21 | nop 
    22 | nop 
    23 | nop 
    24 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━●
r3 │             ●━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  
